buildLog.txt
number.cpp: In constructor 'Math::Number::Number(int, int, int, double)':
number.cpp:39:52: error: use of deleted function 'Math::_type::_type()'
  Number::Number(int valType, int a, int b, double c) {
                                                    ^
In file included from includes\Main.h:25:0,
                 from number.cpp:1:
includes\Number.h:33:8: note: 'Math::_type::_type()' is implicitly deleted because the default definition would be ill-formed:
  union _type {
        ^~~~~
includes\Number.h:34:12: error: union member 'Math::_type::rat' with non-trivial 'Math::Rational::Rational()'
   Rational rat;
            ^~~
number.cpp:43:19: error: 'int Math::Rational::n' is private within this context
    this->type.rat.n = a;
                   ^
In file included from includes\Main.h:25:0,
                 from number.cpp:1:
includes\Number.h:8:8: note: declared private here
    int n;
        ^
number.cpp:44:19: error: 'int Math::Rational::d' is private within this context
    this->type.rat.d = b;
                   ^
In file included from includes\Main.h:25:0,
                 from number.cpp:1:
includes\Number.h:9:8: note: declared private here
    int d;
        ^
make: *** [number.o] Error 1
